--- a/assets/scss/partials/_tablet.scss
+++ b/assets/scss/partials/_tablet.scss
@@ -7,7 +7,7 @@
         background-color: red;
 
         .flex-container ul {
-            margin-bottom: $gutter;
+            margin: $gutter;
         }
     }
     .flex-container {
